zebra-state/src/service/finalized_state/disk_format/tests/snapshots/tip_chain_value_pool_raw_data@mainnet_1.snap
---
source: zebra-state/src/service/finalized_state/disk_format/tests/snapshot.rs
assertion_line: 146
expression: cf_data
---
[
  KV(
    k: "",
    v: "24f400000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
  ),
]
