zebra-state/src/service/finalized_state/disk_format/tests/snapshots/tip_chain_value_pool_raw_data@testnet_2.snap
---
source: zebra-state/src/service/finalized_state/disk_format/tests/snapshot.rs
assertion_line: 146
expression: cf_data
---
[
  KV(
    k: "",
    v: "6cdc02000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
  ),
]
