zebra-state/src/service/finalized_state/disk_format/tests/snapshots/vct_upgrade_metadata_raw_data@testnet_0.snap
---
source: zebra-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: cf_data
---
[
  KV(
    k: "",
    v: "000000",
  ),
]
